blog infrastructure + google analytics maybe stuff idfk

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,81 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
+    @font-face {
+    font-family: "Magnat";
+    src: url("/fonts/Magnat-HeadSemiBoldItalic.woff2") format("woff2");
+    font-weight: 600;
+    font-style: italic;
+  }
+
+    @font-face {
+        font-family: "Magnat";
+        src: url("/fonts/Magnat-HeadRegular.woff2") format("woff2");
+        font-weight: normal;
+        font-style: normal;
+    }
+
+    @font-face {
+        font-family: "Magnat";
+        src: url("/fonts/Magnat-HeadLightItalic.woff2") format("woff2");
+        font-weight: 300;
+        font-style: italic;
+    }
+
+    @font-face {
+        font-family: "Magnat";
+        src: url("/fonts/Magnat-HeadBoldItalic.woff2") format("woff2");
+        font-weight: bold;
+        font-style: italic;
+    }
+
+    @font-face {
+        font-family: "Magnat";
+        src: url("/fonts/Magnat-HeadBold.woff2") format("woff2");
+        font-weight: bold;
+        font-style: normal;
+    }
+
+    @font-face {
+        font-family: "Magnat";
+        src: url("/fonts/Magnat-HeadMedium.woff2") format("woff2");
+        font-weight: 500;
+        font-style: normal;
+    }
+
+    @font-face {
+        font-family: "Magnat";
+        src: url("/fonts/Magnat-HeadExtraBoldItalic.woff2") format("woff2");
+        font-weight: 800;
+        font-style: italic;
+    }
+
+    @font-face {
+        font-family: "Magnat";
+        src: url("/fonts/Magnat-HeadRegularItalic.woff2") format("woff2");
+        font-weight: normal;
+        font-style: italic;
+    }
+
+    @font-face {
+        font-family: "Magnat";
+        src: url("/fonts/Magnat-HeadSemiBold.woff2") format("woff2");
+        font-weight: 600;
+        font-style: normal;
+    }
+
+    @font-face {
+        font-family: "Magnat Head";
+        src: url("/fonts/Magnat-HeadMediumItalic.woff2") format("woff2");
+        font-weight: 500;
+        font-style: italic;
+    }
+
     html {
         scroll-behavior: smooth;
     }
@@ -13,7 +84,9 @@
         margin: 0;
         padding: 0;
         background-color: theme("colors.gray.800");
-        @apply font-[Inter];
+        font-family: "Archivo", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
     }
 
     body::-webkit-scrollbar {
@@ -22,7 +95,7 @@
 
     body::-webkit-scrollbar-thumb {
         border-radius: 25px;
-        background-color: theme("colors.red.500");
+        background-color: theme("colors.primary.500");
     }
 
     .cursor-dot,
@@ -42,7 +115,7 @@
     .cursor-dot {
         width: 8px;
         height: 8px;
-        background-color: theme("colors.red.500");
+        background-color: theme("colors.primary.500");
         border: 2px solid transparent;
         transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
     }
@@ -66,7 +139,7 @@
     }
 
     .hover-animation-light {
-        background: linear-gradient(theme("colors.red.200") 0 0) var(--p, 0) 100% / var(--d, 0) 1px no-repeat !important;
+        background: linear-gradient(theme("colors.primary.200") 0 0) var(--p, 0) 100% / var(--d, 0) 1px no-repeat !important;
         transition: 0.3s, background-position 0s 0.3s;
     }
     .hover-animation-light:hover {
@@ -75,7 +148,7 @@
     }
 
     .hover-animation-dark {
-        background: linear-gradient(theme("colors.red.400") 0 0) var(--p, 0) 100% / var(--d, 0) 1px no-repeat !important;
+        background: linear-gradient(theme("colors.primary.400") 0 0) var(--p, 0) 100% / var(--d, 0) 1px no-repeat !important;
         transition: 0.3s, background-position 0s 0.3s;
     }
     .hover-animation-dark:hover {
@@ -91,18 +164,18 @@
 
     .active-work {
         background-color: rgba(236, 90, 101, 0.1);
-        color: theme("colors.red.500");
+        color: theme("colors.primary.500");
     }
 
     .inactive-work:hover {
         background-color: rgba(236, 90, 101, 0.1);
-        color: theme("colors.red.500");
+        color: theme("colors.primary.500");
     }
 
     .active-work-md {
         background-color: rgba(236, 90, 101, 0.1);
-        border-color: theme("colors.red.500");
-        color: theme("colors.red.500");
+        border-color: theme("colors.primary.500");
+        color: theme("colors.primary.500");
     }
 
     .inactive-work-md {
@@ -110,7 +183,7 @@
     }
     .inactive-work-md:hover {
         background-color: rgba(236, 90, 101, 0.1);
-        color: theme("colors.red.500");
+        color: theme("colors.primary.500");
     }
 
     ::selection {
@@ -131,7 +204,7 @@
 
     .input {
         background: linear-gradient(to right, theme("colors.gray.100"), theme("colors.gray.100")),
-            linear-gradient(to right, theme("colors.red.500"), theme("colors.red.500"), theme("colors.red.500"));
+            linear-gradient(to right, theme("colors.primary.500"), theme("colors.primary.500"), theme("colors.primary.500"));
         background-size: 100% 0.1em, 0 0.1em;
         background-position: 100% 100%, 0 100%;
         background-repeat: no-repeat;
@@ -144,31 +217,4 @@
     .input:focus {
         background-size: 0 0.1em, 100% 0.1em;
     }
-
-    @keyframes fade-in-out {
-        0% {
-            opacity: 0;
-        }
-
-        25%,
-        95% {
-            opacity: 1;
-        }
-
-        100% {
-            opacity: 0;
-        }
-    }
-
-    .fade-in-out {
-        animation: fade-in-out 5s both infinite;
-    }
 }
-
-.react-pdf__Page__annotations {
-        height: 10px !important;
-    }
-    
-    .annotationLayer {
-        height: 10px !important;
-    }
