--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,7 +106,7 @@
         position: fixed;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: tranprimary(-50%, -50%);
         border-radius: 50%;
         opacity: 0;
         transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
