--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 @layer base {
   @font-face {
@@ -76,6 +75,10 @@
     font-style: italic;
   }
 
+  @font-face {
+    font-family: "Roboto Mono";
+  }
+
   html {
     scroll-behavior: smooth;
   }
@@ -89,6 +92,10 @@
     text-rendering: optimizeLegibility;
   }
 
+  .font-code {
+    font-family: "Roboto Mono", monospace;
+  }
+
   body::-webkit-scrollbar {
     width: 7px;
   }
@@ -100,44 +107,39 @@
 
   .cursor-dot,
   .cursor-dot-outline {
-    margin: auto;
-    justify-content: center;
-    pointer-events: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: tranprimary(-50%, -50%);
-    border-radius: 50%;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out,
-      border 0.3s ease-in-out;
+      margin: auto;
+      justify-content: center;
+      pointer-events: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
   }
 
   .cursor-dot {
-    width: 8px;
-    height: 8px;
-    background-color: theme("colors.primary.500");
-    border: 2px solid transparent;
-    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out,
-      border 0.3s ease-in-out;
+      width: 8px;
+      height: 8px;
+      background-color: theme("colors.primary.500");
+      border: 2px solid transparent;
+      transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
   }
 
   .cursor-dot-outline {
-    width: 40px;
-    height: 40px;
-    background-color: transparent;
-    border: 2px solid rgb(233, 128, 116, 0.5);
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out,
-      width 0.3s ease-in-out, height 0.3s ease-in-out, border 0.3s ease-in-out;
+      width: 40px;
+      height: 40px;
+      background-color: transparent;
+      border: 2px solid rgb(233, 128, 116, 0.5);
+      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out,
+      border 0.3s ease-in-out;
   }
+
 
   li {
     @apply px-4;
     @apply cursor-pointer;
-  }
-
-  .font-code {
-    @apply font-[monospace];
   }
 
   .hover-animation-light {
@@ -229,5 +231,32 @@
 
   .input:focus {
     background-size: 0 0.1em, 100% 0.1em;
+  }
+
+  .text-effect:hover {
+    transform: trangray3d(0px, -0.0356402%, 0px) scale3d(1, 1, 1) rotateX(0deg)
+      rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+    transform-style: preserve-3d;
+    will-change: transform;
+  }
+
+  html.lenis {
+    height: auto;
+  }
+  
+  .lenis.lenis-smooth {
+    scroll-behavior: auto;
+  }
+  
+  .lenis.lenis-smooth [data-lenis-prevent] {
+    overscroll-behavior: contain;
+  }
+  
+  .lenis.lenis-stopped {
+    overflow: hidden;
+  }
+  
+  .lenis.lenis-scrolling iframe {
+    pointer-events: none;
   }
 }
