--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-
 @layer base {
   @font-face {
     font-family: "Magnat";
@@ -75,10 +73,6 @@
     font-style: italic;
   }
 
-  @font-face {
-    font-family: "Roboto Mono";
-  }
-
   html {
     scroll-behavior: smooth;
   }
@@ -87,56 +81,34 @@
     margin: 0;
     padding: 0;
     background-color: theme("colors.gray.800");
-    font-family: "Archivo", sans-serif;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
   }
 
-  .font-code {
-    font-family: "Roboto Mono", monospace;
-  }
-
-  body::-webkit-scrollbar {
+  *::-webkit-scrollbar {
     width: 7px;
+    height: 7px;
   }
 
-  body::-webkit-scrollbar-thumb {
+  *::-webkit-scrollbar-thumb {
     border-radius: 25px;
     background-color: theme("colors.primary.500");
   }
 
-  .cursor-dot,
-  .cursor-dot-outline {
-      margin: auto;
-      justify-content: center;
-      pointer-events: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      border-radius: 50%;
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
-  }
-
   .cursor-dot {
-      width: 8px;
-      height: 8px;
-      background-color: theme("colors.primary.500");
-      border: 2px solid transparent;
-      transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
+    margin: auto;
+    justify-content: center;
+    pointer-events: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border-radius: 50%;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
+    background-color: theme("colors.primary.400");
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
+    transform-origin: 50% 50%;
   }
-
-  .cursor-dot-outline {
-      width: 40px;
-      height: 40px;
-      background-color: transparent;
-      border: 2px solid rgb(233, 128, 116, 0.5);
-      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out,
-      border 0.3s ease-in-out;
-  }
-
-
+ 
   li {
     @apply px-4;
     @apply cursor-pointer;
@@ -240,7 +212,7 @@
     will-change: transform;
   }
 
-  html.lenis {
+  /* html.lenis {
     height: auto;
   }
   
@@ -257,6 +229,10 @@
   }
   
   .lenis.lenis-scrolling iframe {
+    pointer-events: none;
+  } */
+
+  button span {
     pointer-events: none;
   }
 }
